@@ -1,9 +1,13 @@
 package com.mravel.plan.service;
 
+import com.mravel.common.response.RelationshipType;
 import com.mravel.common.response.UserProfileResponse;
+import com.mravel.plan.client.FriendClient;
 import com.mravel.plan.client.UserProfileClient;
 import com.mravel.plan.dto.CreatePlanRequest;
 import com.mravel.plan.dto.PlanFeedItem;
+import com.mravel.plan.dto.board.PlanRecentView;
+import com.mravel.plan.model.ExtraCost;
 import com.mravel.plan.model.Plan;
 import com.mravel.plan.model.PlanCard;
 import com.mravel.plan.model.PlanComment;
@@ -13,8 +17,11 @@ import com.mravel.plan.model.PlanReaction;
 import com.mravel.plan.model.SplitType;
 import com.mravel.plan.model.Visibility;
 import com.mravel.plan.repository.PlanCardRepository;
+import com.mravel.plan.repository.PlanInviteTokenRepository;
 import com.mravel.plan.repository.PlanReactionRepository;
+import com.mravel.plan.repository.PlanRecentViewRepository;
 import com.mravel.plan.repository.PlanRepository;
+import com.mravel.plan.security.CurrentUserService;
 import com.mravel.plan.repository.PlanListRepository;
 import com.mravel.plan.repository.PlanMemberRepository;
 import jakarta.persistence.EntityManager;
@@ -27,6 +34,7 @@ import org.springframework.stereotype.Service;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,25 +48,36 @@ public class PlanService {
         private final PlanListRepository listRepository;
         private final PlanCardRepository cardRepository;
         private final PlanMemberRepository memberRepository;
+        private final PlanRecentViewRepository recentViewRepository;
+        private final PlanInviteTokenRepository inviteTokenRepository;
+        private final CurrentUserService currentUser;
+        private final FriendClient friendClient;
 
         // EntityManager để truy vấn trực tiếp cho comment
         @PersistenceContext
         private EntityManager entityManager;
 
-        public Page<PlanFeedItem> getFeed(int page, int size, Long viewerId) {
+        public Page<PlanFeedItem> searchFeed(int page, int size, Long viewerId, String authorizationHeader, String q) {
                 PageRequest pageable = PageRequest.of(page - 1, size, Sort.by(Sort.Direction.DESC, "createdAt"));
 
-                Page<Plan> pageResult;
+                List<Long> memberPlanIds = memberRepository.findPlanIdsByUserId(viewerId);
+                if (memberPlanIds.isEmpty())
+                        memberPlanIds = List.of(-1L);
 
-                if (viewerId == null) {
-                        pageResult = planRepository.findByVisibility(Visibility.PUBLIC, pageable);
-                } else {
-                        List<Long> memberPlanIds = memberRepository.findPlanIdsByUserId(viewerId);
-                        if (memberPlanIds.isEmpty()) {
-                                memberPlanIds = Collections.singletonList(-1L); // tránh IN ()
+                List<Long> friendIds = List.of();
+                if (authorizationHeader != null) {
+                        try {
+                                friendIds = friendClient.getFriendIds(authorizationHeader);
+                        } catch (Exception ignored) {
                         }
-                        pageResult = planRepository.findVisibleForUser(viewerId, memberPlanIds, pageable);
                 }
+                if (friendIds.isEmpty())
+                        friendIds = List.of(-1L);
+
+                String keyword = normalizeSearch(q);
+
+                Page<Plan> pageResult = planRepository.searchFeedForUser(viewerId, memberPlanIds, friendIds, keyword,
+                                pageable);
 
                 List<PlanFeedItem> content = pageResult.getContent().stream()
                                 .map(planMapper::toFeedItem)
@@ -67,12 +86,68 @@ public class PlanService {
                 return new PageImpl<>(content, pageable, pageResult.getTotalElements());
         }
 
-        public PlanFeedItem getById(Long id, Long viewerId, boolean isFriend) {
+        public List<UserProfileResponse> searchUsersFromUserService(String authorizationHeader, String q, int limit) {
+                String keyword = normalizeSearch(q);
+                if (keyword.isBlank())
+                        return List.of();
+                try {
+                        return userProfileClient.searchUsers(authorizationHeader, q, limit);
+                } catch (Exception e) {
+                        return List.of();
+                }
+        }
+
+        private String normalizeSearch(String q) {
+                if (q == null)
+                        return "";
+                String s = q.trim();
+                if (s.startsWith("@"))
+                        s = s.substring(1).trim();
+                return s;
+        }
+
+        public Page<PlanFeedItem> getFeed(int page, int size, Long viewerId, String authorizationHeader) {
+                PageRequest pageable = PageRequest.of(page - 1, size, Sort.by(Sort.Direction.DESC, "createdAt"));
+
+                List<Long> memberPlanIds = memberRepository.findPlanIdsByUserId(viewerId);
+                if (memberPlanIds.isEmpty())
+                        memberPlanIds = List.of(-1L);
+
+                List<Long> friendIds = List.of();
+                if (authorizationHeader != null) {
+                        try {
+                                friendIds = friendClient.getFriendIds(authorizationHeader);
+                        } catch (Exception ignored) {
+                        }
+                }
+                if (friendIds.isEmpty())
+                        friendIds = List.of(-1L);
+
+                Page<Plan> pageResult = planRepository.findFeedForUser(viewerId, memberPlanIds, friendIds, pageable);
+
+                List<PlanFeedItem> content = pageResult.getContent().stream()
+                                .map(planMapper::toFeedItem)
+                                .toList();
+
+                return new PageImpl<>(content, pageable, pageResult.getTotalElements());
+        }
+
+        public PlanFeedItem getById(Long id, String authorizationHeader) {
+
+                Long viewerId = currentUser.getId();
+
                 Plan plan = planRepository.findById(id)
                                 .orElseThrow(() -> new RuntimeException("Plan not found"));
 
-                if (!permissionService.canView(id, viewerId, isFriend))
+                RelationshipType relationship = friendClient.getRelationship(
+                                authorizationHeader,
+                                plan.getAuthorId());
+
+                boolean isFriend = relationship == RelationshipType.FRIEND;
+
+                if (!permissionService.canView(id, viewerId, isFriend)) {
                         throw new RuntimeException("You don't have permission to view this plan.");
+                }
 
                 return planMapper.toFeedItem(plan);
         }
@@ -155,14 +230,17 @@ public class PlanService {
         }
 
         @Transactional
-        public PlanFeedItem copyPublicPlan(Long planId, Long userId) {
+        public PlanFeedItem copyPlan(Long planId, Long userId) {
 
                 Plan source = planRepository.findById(planId)
                                 .orElseThrow(() -> new RuntimeException("Plan not found"));
 
-                if (source.getVisibility() != Visibility.PUBLIC)
-                        throw new RuntimeException("Only public plans can be copied.");
+                boolean isMember = memberRepository.existsByPlanIdAndUserId(planId, userId);
 
+                if (source.getVisibility() != Visibility.PUBLIC && !isMember) {
+                        throw new RuntimeException("You don't have permission to copy this plan.");
+                }
+                // Tạo plan mới
                 Plan copy = Plan.builder()
                                 .title(source.getTitle() + " (Copy)")
                                 .description(source.getDescription())
@@ -173,8 +251,12 @@ public class PlanService {
                                 .days(source.getDays())
                                 .budgetCurrency(source.getBudgetCurrency())
                                 .budgetTotal(source.getBudgetTotal())
+                                .budgetPerPerson(source.getBudgetPerPerson())
                                 .createdAt(Instant.now())
                                 .views(0L)
+                                // Tổng chi phí sẽ tính lại sau hoặc để 0
+                                .totalEstimatedCost(0L)
+                                .totalActualCost(0L)
                                 .images(new ArrayList<>(source.getImages()))
                                 .destinations(new ArrayList<>(source.getDestinations()))
                                 .build();
@@ -189,7 +271,6 @@ public class PlanService {
                                 .sorted(Comparator.comparingInt(PlanList::getPosition))
                                 .toList();
 
-                // mapping list IDs
                 Map<Long, PlanList> oldToNewList = new HashMap<>();
 
                 for (int i = 0; i < sourceDays.size(); i++) {
@@ -227,19 +308,25 @@ public class PlanService {
 
                                                 .currencyCode(oc.getCurrencyCode())
                                                 .estimatedCost(oc.getEstimatedCost())
-                                                .actualCost(oc.getActualCost())
-
-                                                .extraCosts(new HashSet<>(oc.getExtraCosts()))
-                                                // reset
-                                                .participants(Collections.emptySet())
+                                                // Reset actual về null, để tính lại sau
+                                                .actualCost(null)
+                                                .actualManual(false)
+                                                .budgetAmount(oc.getBudgetAmount())
                                                 .participantCount(null)
+
+                                                // reset chia tiền
                                                 .splitType(SplitType.NONE)
                                                 .includePayerInSplit(true)
-                                                .splitMembers(Collections.emptySet())
-                                                .splitDetails(Collections.emptySet())
-                                                .payments(Collections.emptySet())
                                                 .payerId(null)
                                                 .build();
+
+                                oc.getExtraCosts().forEach(e -> nc.getExtraCosts().add(
+                                                ExtraCost.builder()
+                                                                .reason(e.getReason())
+                                                                .type(e.getType())
+                                                                .estimatedAmount(e.getEstimatedAmount())
+                                                                .actualAmount(e.getActualAmount())
+                                                                .build()));
 
                                 cardRepository.save(nc);
                         }
@@ -261,8 +348,6 @@ public class PlanService {
         public PlanFeedItem.Comment addComment(
                         Long planId,
                         Long userId,
-                        String userName,
-                        String userAvatar,
                         String text,
                         Long parentId) {
 
@@ -280,14 +365,19 @@ public class PlanService {
                                 .plan(plan)
                                 .parent(parent)
                                 .userId(userId)
-                                .userName(userName)
-                                .userAvatar(userAvatar)
                                 .text(text)
                                 .createdAt(Instant.now())
                                 .build();
 
                 entityManager.persist(comment);
                 entityManager.flush();
+
+                // cache profile
+                UserProfileResponse profile = null;
+                try {
+                        profile = userProfileClient.getUserById(userId);
+                } catch (Exception ignored) {
+                }
 
                 return PlanFeedItem.Comment.builder()
                                 .id(comment.getId())
@@ -296,8 +386,8 @@ public class PlanService {
                                 .createdAt(comment.getCreatedAt())
                                 .user(PlanFeedItem.Comment.User.builder()
                                                 .id(userId)
-                                                .name(userName)
-                                                .avatar(userAvatar)
+                                                .name(profile != null ? profile.getFullname() : null)
+                                                .avatar(profile != null ? profile.getAvatar() : null)
                                                 .build())
                                 .build();
         }
@@ -322,8 +412,6 @@ public class PlanService {
                         PlanReaction newReact = PlanReaction.builder()
                                         .plan(plan)
                                         .userId(userId)
-                                        .userName(user.getFullname())
-                                        .userAvatar(user.getAvatar())
                                         .type(key)
                                         .createdAt(Instant.now())
                                         .build();
@@ -343,4 +431,103 @@ public class PlanService {
                 plan.setViews(Optional.ofNullable(plan.getViews()).orElse(0L) + 1);
                 planRepository.save(plan);
         }
+
+        public Page<PlanFeedItem> getUserPlans(Long ownerId, Long viewerId) {
+                return getUserPlans(ownerId, viewerId, false);
+        }
+
+        public Page<PlanFeedItem> getUserPlans(Long ownerId, Long viewerId, boolean isFriend) {
+
+                List<Long> memberPlanIds = memberRepository.findPlanIdsByUserId(viewerId);
+                if (memberPlanIds.isEmpty())
+                        memberPlanIds = List.of(-1L); // tránh IN ()
+
+                Pageable pageable = PageRequest.of(0, 20, Sort.by(Sort.Direction.DESC, "createdAt"));
+
+                Page<Plan> plans;
+
+                // Nếu xem kế hoạch của chính mình → xem tất cả
+                if (Objects.equals(ownerId, viewerId)) {
+                        plans = planRepository.findByAuthorId(ownerId, pageable);
+                } else {
+                        plans = planRepository.findAllPlansOfUserWithVisibility(
+                                        ownerId,
+                                        isFriend,
+                                        memberPlanIds,
+                                        pageable);
+                }
+
+                List<PlanFeedItem> items = plans.getContent().stream()
+                                .map(planMapper::toFeedItem)
+                                .toList();
+
+                return new PageImpl<>(items, pageable, plans.getTotalElements());
+        }
+
+        @Transactional
+        public List<PlanFeedItem> getRecentPlans(Long viewerId) {
+                if (viewerId == null) {
+                        return List.of();
+                }
+
+                // Lấy top 20 lịch trình vừa xem gần đây nhất
+                List<PlanRecentView> views = recentViewRepository
+                                .findTop20ByUserIdOrderByViewedAtDesc(viewerId);
+
+                if (views.isEmpty())
+                        return List.of();
+
+                List<Long> planIds = views.stream()
+                                .map(PlanRecentView::getPlanId)
+                                .toList();
+
+                // Load plan
+                List<Plan> plans = planRepository.findAllById(planIds);
+
+                // Map id -> Plan để giữ đúng thứ tự theo viewedAt
+                Map<Long, Plan> planMap = plans.stream()
+                                .collect(Collectors.toMap(Plan::getId, p -> p));
+
+                List<PlanFeedItem> result = new ArrayList<>();
+
+                for (PlanRecentView v : views) {
+                        Plan p = planMap.get(v.getPlanId());
+                        if (p == null)
+                                continue;
+
+                        // Chỉ thêm nếu user hiện tại vẫn xem được (tránh case visibility đổi)
+                        if (!permissionService.canView(p.getId(), viewerId, false)) {
+                                continue;
+                        }
+
+                        result.add(planMapper.toFeedItem(p));
+                }
+
+                return result;
+        }
+
+        @Transactional
+        public void removeRecentPlan(Long planId, Long viewerId) {
+                if (viewerId == null)
+                        return;
+                recentViewRepository.deleteByUserIdAndPlanId(viewerId, planId);
+        }
+
+        @Transactional
+        public void deletePlan(Long planId, Long userId) {
+                inviteTokenRepository.deleteByPlanId(planId);
+                Plan plan = planRepository.findById(planId)
+                                .orElseThrow(() -> new RuntimeException("Plan not found"));
+
+                if (!Objects.equals(plan.getAuthorId(), userId)) {
+                        throw new RuntimeException("Only the owner can delete this plan.");
+                }
+
+                recentViewRepository.deleteByPlanId(planId);
+
+                planRepository.delete(plan);
+
+                planRepository.flush();
+        }
+
 }
